# EvSpace

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  build_evals.sh  makefile  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
Island/: EvalBox.c  EvalBox.js  EvalBox.wasm  EvalBox.worker.js  Island.ts  IslandFactory.ts  WasmIsland.ts
Mainland/: mainland.test.ts  mainland.ts
bazel/: extensions.bzl
eval/: EvalBox.c  configs.ts  eval.ts  eval_extended.ts  eval_factory.ts  eval_wasm.ts
eval/evals/: poly.cc  poly.h  sort.cc  sort.h
eval/natives/: base.cc  base.h  binding.gyp  module.cc  poly.cc  poly.h  sort.cc  sort.h
eval/wasms/: poly.cc  sort.cc
eval_space/: eval_space.test.ts  eval_space.ts
scripts/bazel/: extension.bzl
src/: BUILD.bazel  test.ts
src/base/: BUILD.bazel  assert.h  macros.h  thread_safety.h  traits.h  utility.h
src/eval/: eval_space.test.ts  eval_space.ts  sort.h
src/eval/async/: BUILD.bazel  async.h  pipe.h  pipe_unittest.cc  traits.h
src/eval/async/control/: BUILD.bazel  control.h
src/eval/async/messages/: BUILD.bazel  counter.proto  example.cc  messages.h
src/eval/async/transfer/: BUILD.bazel  pipe.h  pipe_unittest.cc
src/eval/basis/: BUILD.bazel  async_pipe.h  basis.h  basis_declarations.h
src/eval/basis/misc/: BUILD.bazel  misc.h  misc_declarations.cc  misc_declarations.h  trivial.h
src/eval/basis/sort/: BUILD.bazel  insertion_sort.cc  insertion_sort.h  insertion_sort_unittest.cc  sort.h  sort_declarations.cc  sort_declarations.h
src/eval/spaces/: space.h  wasm_space.h
src/eval/spaces/node_native_space/: BUILD.bazel  codegen.h  hello.cc  node_native_space.cc  node_native_space.h  space_generator.h
src/eval/spaces/wasm_space/: BUILD.bazel  wasm_space.cc  wasm_space.h
src/web/: evaluator.ts  evaluator_factory.ts  evaluator_native.ts  evaluator_wasm.ts  platforms.ts
src/web/async/: message.ts  pipe.ts
src/web/base/: assert.ts  utility.ts
test/: BUILD.bazel  async.test.ts  babel.config.cjs  basis.test.ts  embind.test.ts  eval.test.ts  test.ts
