load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@bazel_skylib//lib:partial.bzl", "partial")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

ts_project(
    name = "compile",
    srcs = ["test.ts",
            "//src/eval/spaces/node_native_space:hello",
            "//src/eval/spaces/wasm_space:wasm-space-cc"],
    transpiler = partial.make(
        swc,
        swcrc = "//:.swcrc",
        out_dir = "build_swc"),
    declaration = True,
    tsconfig = "//:ts_config",
    deps = ["//:node_modules"],
)

jest_test(
    name = "test",
    data = [":compile"],
    node_modules = "//:node_modules",
)
