
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "basis-unittest",
    data = ["//:main",
            "basis.test.ts",
            "babel.config.js"],
    node_modules = "//:node_modules",
)

jest_test(
    name = "eval-unittest",
    data = ["//:main",
            "eval.test.ts",
            "babel.config.js"],
    node_modules = "//:node_modules",
)

jest_test(
    name = "async-unittest",
    data = ["//:main",
            "async.test.ts",
            "babel.config.js",
            "//src/eval/async/messages:counter_proto_js"
            ],
    node_modules = "//:node_modules",
)
