filegroup(
    name = "async-srcs",
    srcs = ["pipe.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "async-hdrs",
    srcs = ["pipe.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "async",
    hdrs = [":async-hdrs",
            "//src/eval/async/messages:message-srcs",
            ],
    deps = ["//src/eval/async/messages:counter_cc_proto",
            "//src/base:base"],
    visibility = ["//visibility:public"],
)


cc_test(
    name = "async-unittest",
    srcs = [":async-srcs",
            "pipe_unittest.cc"],
    deps = ["//src/eval/async/messages:counter_cc_proto",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            "//src/base:base"],
)
