filegroup(
    name = "basis-headers",
    srcs = ["basis.h",
            "//src/eval/basis/sort:sort-hdrs"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "basis-srcs",
    srcs = ["basis.h", "basis_declarations.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "basis",
    srcs = [":basis-srcs",
            "//src/eval/basis/sort:sort-srcs"],
    hdrs = ["basis-headers"],
    deps = ["@proxy//:proxy"],
    visibility = ["//visibility:public"],
)
