filegroup(
    name = "sort-base-srcs",
    srcs = ["sort.h", "sort_declarations.h"],
)

filegroup(
    name = "insert-sort-srcs",
    srcs = ["insertion_sort.h", "insertion_sort.cc"]
)

filegroup(
    name = "sort-srcs",
    srcs = [":sort-base-srcs", ":insert-sort-srcs"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sort",
    srcs = [":sort-srcs",
            "//src/eval/basis:basis-headers"],
    deps = ["@proxy//:proxy"],
    visibility = ["//visibility:public"],
)
