filegroup(
    name = "sort-base-srcs",
    srcs = ["sort.h", "sort_declarations.h"],
)

filegroup(
    name = "insert-sort-srcs",
    srcs = ["insertion_sort.h"]
)

filegroup(
    name = "sort-srcs",
    srcs = [":sort-base-srcs", ":insert-sort-srcs"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "sort-unittest",
    srcs = ["insertion_sort_unittest.cc",
            ":sort-srcs",
            "//src/eval/basis:basis-headers"],
    deps = ["@proxy//:proxy",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck"],
)
