load("@node_native_rules//:natives/node_binary.bzl", "node_binary")

node_binary(
    name = "node_native_space",
    srcs = ["node_native_space.cc",
            "space_generator.h",
            "node_native_space.h",
            "//src/eval/basis:basis-srcs",
            "//src/eval/basis/sort:sort-srcs",
            "//src/eval/async:async-srcs",
            "//src/base:base-hdrs",
            "//src/eval/basis/misc:misc-srcs"],
    deps = ["//src/eval/async:async"],
    include_dirs = ["./src"],
    node_modules = "//:node_modules",
    visibility = ["//visibility:public"]
)
